kubernetes/monitoring/node-exporter.yml
#Daemonset:jalankan 1 pod di setiap node
#====================
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
       app: node-exporter
  template:
     metadata:
        labels:
          app: node-exporter
     spec:
        serviceAccountName: node-exporter
        hostPID: true
        hostNetwork: true
        containers:
          - name: node-exporter
            image: quay.io/prometheus/node-exporter:v1.8.1 #sesuai versi
            args:
              - "--path.rootfs=/host"
            ports:
              - name: metrics
                containerPort: 9100
            volumeMounts:
              - name: root
                mountPath: /host
                readOnly: true
        volumes:
           - name: root
             hostPath:
               path: /
---
#Service untuk prometheus scrape metric
#-==========================
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    app: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
  clusterIP: None #service headles
